# ctftime-bot

./: Cargo.toml  build_lambda.sh  readme.md  run_lambda.sh
src/: main.rs
